--- a/views/index.html
+++ b/views/index.html
@@ -33,14 +33,14 @@
       <p><strong>from, to</strong> = dates (yyyy-mm-dd); <strong>limit</strong> = number</p>
     </div>
     <script>
-      const exerciseForm = document.getElementById("exercise-form");
+      // const exerciseForm = document.getElementById("exercise-form");
 
-      exerciseForm.addEventListener("submit", () => {
-        const userId = document.getElementById("uid").value;
-        exerciseForm.action = `/api/users/${userId}/exercises`;
+      // exerciseForm.addEventListener("submit", () => {
+      //   const userId = document.getElementById("uid").value;
+      //   exerciseForm.action = `/api/users/${userId}/exercises`;
 
-        exerciseForm.submit();
-      });
+      //   exerciseForm.submit();
+      // });
     </script>
   </body>
 </html>
